# lambda_rust_crosstalk

./: .dockerignore  Cargo.toml  Dockerfile
framework/: Cargo.toml
framework/src/: lib.rs  router.rs
service_a/: Cargo.toml
service_a/src/: main.rs
service_b/: Cargo.toml
service_b/src/: main.rs
