[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
aws_lambda_events = { version = "0.12.1", features = ["apigw"] }

[dev-dependencies]
tokio = "1.34.0"