[package]
name = "service_a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.3"
aws_lambda_events = { version = "0.12.1", features = ["apigw"] }
framework = { path = "../framework" }
lambda_runtime = "0.8.3"
lazy_static = "1.4.0"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"